--- a/homepage.html
+++ b/homepage.html
@@ -9,10 +9,15 @@
 <body>
     <div id="Ret">
         <div class="left">
-            <h1>Login</h1>
-            <input type="text" id="txtlgn1";
+            <h1>Sign In</h1>
+            <input type="email" name="email1" id="email1" value="Seu e-mail">
+            <input type="password" name="key1" id="key1" value="Senha">
+            <button type="submit">Login</button>
+            <input type="checkbox" name="remember" id="remember">
         </div>
-        <div class="right"></div>
+        <div class="right">
+
+        </div>
     </div>
 </body>
 </html>
