--- a/login.html
+++ b/login.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultfy</title>
+    <title>Consultfy - Login</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div id="Ret">
+    <header>
+    
+    </header>
+    <Section>
         <div class="right">
             <h2>Acesse sua conta</h2>
-            <input type="email" name="email1" id="email1" placeholder="Seu e-mail" autocomplete="on" >
+            <input type="email" name="email" id="email" placeholder="Seu e-mail" autocomplete="on" >
             <input type="password" name="key1" id="key1" placeholder="Senha" autocomplete="on">
             <input type="checkbox" name="remember" id="remember"> Remember me
             <p>Esqueceu a senha?</p>
@@ -21,6 +25,9 @@
             <h2>Bem vindo!</h2>
             <p>Utilize sua conta já existente para realizar login</p>
         </div>
-    </div>
+    </Section>
+    <footer>
+
+    </footer>
 </body>
 </html>
